# autotools_hello

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  configure  configure.ac  hello.c
